[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustchain-tool-exa-search"
version = "0.1.0"
description = "TrustChain Pentest exa-search tool — Exa.ai web search wrapper."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
