[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustchain-tool-exa-search"
version = "0.1.1"
description = "TrustChain Pentest exa-search tool — Exa.ai web search wrapper. v0.1.1 adds optional include_text=true to fetch each result's page text excerpt (so downstream LLM extraction has actual content, not just title+URL metadata)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
