[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustchain-tool-http-fetch"
version = "0.1.0"
description = "TrustChain Pentest http_fetch tool — engine egress proxy."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "trustchain-contracts>=0.1,<0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
