[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustchain-tool-linkfinder"
version = "0.1.0"
description = "TrustChain Pentest linkfinder tool — JavaScript file URL / endpoint extractor (thin wrapper over the LinkFinder Python tool)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkfinder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
