[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustchain-tool-webstructure"
version = "0.1.1"
description = "TrustChain Pentest webstructure tool — HTML link / form / API-doc discovery via recursive same-origin crawl. v0.1.1 adds optional Playwright SPA rendering (default ON, matches LLMAppSec)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "pydantic>=2.5,<3.0",
    "playwright>=1.40,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webstructure"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
